Updated nuget push step

--- a/.azure-pipelines/ci-build.yml
+++ b/.azure-pipelines/ci-build.yml
@@ -111,14 +111,30 @@ extends:
       - deployment: DeployToInternalFeed
         displayName: 'Deploy to Internal Feed'
         environment: 'InternalFeed'
-        templateContext:
-          outputs:
-          - output: nuget
-            displayName: 'Publish NuGet to feed'
-            packageParentPath: '$(Build.ArtifactStagingDirectory)'
-            packagesToPush: $(Build.ArtifactStagingDirectory)/**/Microsoft.Graph.*.nupkg
-            publishVstsFeed: '{{ parameters.InternalFeed }}'
-            allowPackageConflicts: true 
+        strategy:
+          runOnce:
+            deploy:
+              steps:
+              # - task: DownloadPipelineArtifact@2
+              #   displayName: 'Download Build Artifacts'
+              #   inputs:
+              #     buildType: 'specific'
+              #     project: 'Graph Developer Experiences'
+              #     definition: '_PowerShell V2 Build'
+              #     buildVersionToDownload: 'latest'
+              #     targetPath: '$(System.DefaultWorkingDirectory)'
+              # - task: NuGetToolInstaller@1
+              #   displayName: 'Use NuGet  6.5.0'
+              #   inputs:
+              #     versionSpec: ' 6.5.0'
+              # - task: NuGetAuthenticate@1
+              #   displayName: 'NuGet Authenticate'
+              - task: NuGetCommand@2
+                displayName: 'NuGet push'
+                inputs:
+                  command: push
+                  packagesToPush: '$(Build.ArtifactStagingDirectory)/**/Microsoft.Graph.*.nupkg'
+                  publishVstsFeed: '{{ parameters.InternalFeed }}'
 
 
     
