--- a/.azure-pipelines/ci-build.yml
+++ b/.azure-pipelines/ci-build.yml
@@ -106,28 +106,22 @@ extends:
 
         - template: .azure-pipelines/common-templates/security-post-checks.yml@self
     - stage: 'Deploy'
+      dependsOn: stage
       jobs:
-      - deployment: DeployToInternalFeed
-        displayName: 'Deploy to Internal Feed'
-        environment: 'InternalFeed'
+        job: MsGraphPsSdkCiPublish
+        displayName: Microsoft Graph PowerShell SDK CI Publish
+        timeoutInMinutes: 60
         steps:
-        # - task: DownloadPipelineArtifact@2
-        #   displayName: 'Download Build Artifacts'
-        #   inputs:
-        #     buildType: 'specific'
-        #     project: 'Graph Developer Experiences'
-        #     definition: 'PowerShell V2 Build'
-        #     buildVersionToDownload: 'latest'
-        #     targetPath: '$(System.DefaultWorkingDirectory)'
-        - task: 1ES.PublishNuget@1
-          displayName: 'Publish NuGet to feed'
-          inputs:
-            useDotNetTask: false
-            packageParentPath: '$(Build.ArtifactStagingDirectory)'
-            packagesToPush: $(Build.ArtifactStagingDirectory)/**/Microsoft.Graph.*.nupkg
-            publishVstsFeed: ${{ parameters.InternalFeed }}
-            nuGetFeedType: internal
-            allowPackageConflicts: true
+          - task: 1ES.PublishNuget@1
+            displayName: 'Publish NuGet to feed'
+            inputs:
+              useDotNetTask: false
+              packageParentPath: '$(Build.ArtifactStagingDirectory)'
+              packagesToPush: $(Build.ArtifactStagingDirectory)/**/Microsoft.Graph.*.nupkg
+              publishVstsFeed: ${{ parameters.InternalFeed }}
+              nuGetFeedType: internal
+              allowPackageConflicts: true
+        
 
       
 
