--- a/.azure-pipelines/ci-build.yml
+++ b/.azure-pipelines/ci-build.yml
@@ -108,19 +108,19 @@ extends:
     - stage: 'Deploy'
       dependsOn: stage
       jobs:
-        job: MsGraphPsSdkCiPublish
+      - job: MsGraphPsSdkCiPublish
         displayName: Microsoft Graph PowerShell SDK CI Publish
         timeoutInMinutes: 60
-        steps:
-          - task: 1ES.PublishNuget@1
-            displayName: 'Publish NuGet to feed'
-            inputs:
-              useDotNetTask: false
-              packageParentPath: '$(Build.ArtifactStagingDirectory)'
-              packagesToPush: $(Build.ArtifactStagingDirectory)/**/Microsoft.Graph.*.nupkg
-              publishVstsFeed: ${{ parameters.InternalFeed }}
-              nuGetFeedType: internal
-              allowPackageConflicts: true
+      steps:
+      - task: 1ES.PublishNuget@1
+        displayName: 'Publish NuGet to feed'
+        inputs:
+          useDotNetTask: false
+          packageParentPath: '$(Build.ArtifactStagingDirectory)'
+          packagesToPush: $(Build.ArtifactStagingDirectory)/**/Microsoft.Graph.*.nupkg
+          publishVstsFeed: ${{ parameters.InternalFeed }}
+          nuGetFeedType: internal
+          allowPackageConflicts: true
         
 
       
