Added checkout to resolve credscan issues

--- a/.azure-pipelines/ci-build.yml
+++ b/.azure-pipelines/ci-build.yml
@@ -115,6 +115,7 @@ extends:
           runOnce:
             deploy:
               steps:
+              - checkout: self
               - task: DownloadPipelineArtifact@2
                 displayName: 'Download Build Artifacts'
                 inputs:
