--- a/.azure-pipelines/ci-build.yml
+++ b/.azure-pipelines/ci-build.yml
@@ -152,9 +152,8 @@ extends:
                   useDotNetTask: false
                   packageParentPath: '$(System.DefaultWorkingDirectory)'
                   packagesToPush: '$(System.DefaultWorkingDirectory)/**/drop/**/*.nupkg'
-                  publishVstsFeed: ${{ parameters.InternalFeed }}
-                  nuGetFeedType: internal
-                  allowPackageConflicts: true
+                  nuGetFeedType: external
+                  publishFeedCredentials: 'microsoftgraph PowerShell Gallery connection'
 
       
 
