Updated agent name from 1es-windows-ps-compute to 1es-windows-ps-compute-m

--- a/.azure-pipelines/ci-build.yml
+++ b/.azure-pipelines/ci-build.yml
@@ -3,7 +3,7 @@
 name: $(BuildDefinitionName)_$(SourceBranchName)_$(Date:yyyyMMdd)$(Rev:.r)
 parameters:
 - name: BuildAgent
-  default: 1es-windows-ps-compute
+  default: 1es-windows-ps-compute-m
   displayName: Build Agent
 - name: Test
   type: boolean
